# multi-agents-tec-case

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  repo.py  teste.py  ui.py
app/: main.py
app/agents/: base.py  extractor.py
app/ai/agents/: base.py  extractor.py  orchestrator.py  qa.py  sentiment.py
app/ai/prompts/: system_prompt.py
app/ai/prompts/extractor/: human_prompt.py  system_prompt.py
app/ai/prompts/metadata_enricher/: human_prompt.py  system_prompt.py
app/ai/prompts/orchestrator/: human_prompt.py  system_prompt.py
app/ai/structured_output/: __init__.py  extractor.py  metadata.py  orchestrator.py  qa.py  sentiment.py
app/ai/workflows/: dependecies.py  nodes.py  state.py  workflow.py  workflow_dependencies.py
app/api/v1/: health.py  ingest.py  query.py
app/core/: config.py  costs.py  deps.py
app/rag/: chroma.py  chunker.py  metadata_enricher.py  pdf_processor.py  rag_processor.py  rag_service.py
app/rag/ingestion/: __init__.py  detector.py  dispatcher.py  enricher.py  fetcher.py  html_ingestor.py  models.py  parsers.py  pdf_ingestor.py  runner.py  types.py
app/schemas/: api.py  domain.py  schemas.py
app/services/: ingestion_service.py  query_service.py
app/utils/: heuristic_extractor.py
app/workflows/: state.py
data/ingestion/: source_catalog.json
data/processed/: amazon_q3_2024_release.md  apple_q4_2024_newsroom.md  bcb_copom_11122024.md  fed_fomc_minutes_20241218.md  microsoft_fy2024_q4_press_release.md
docs/: ARCHITETURE.MD  DECISIONS.md
scripts/: entrypoint.sh
(+4 files in other folders)
